--- a/test-meteor.css
+++ b/test-meteor.css
@@ -1,1 +1,42 @@
-/* CSS declarations go here */
+html, body {
+    height: 100%;
+    min-height: 100%;
+}
+
+.container {
+    display: flex;
+    /*height: 200px;*/
+
+    /*flex-direction: row;*/
+    /*flex-direction: row-reverse;*/
+    /*flex-direction: column;*/
+    /*flex-direction: column-reverse;*/
+
+    justify-content: flex-start;
+    justify-content: flex-end;
+    justify-content: center;
+    justify-content: space-between;
+    justify-content: space-around;
+
+    align-items: flex-start;
+    align-items: flex-end;
+    align-items: center;
+}
+
+.container div {
+    background: blue;
+    color: #fff;
+    padding: 10px;
+}
+
+.container div:first-child {
+    background: green;
+}
+
+.container div:last-child {
+    background: red;
+}
+
+.container div:nth-child(1) {
+    align-self: flex-end;
+}
