--- a/test-meteor.css
+++ b/test-meteor.css
@@ -1,1 +1,83 @@
-/* CSS declarations go here */
+* {
+    margin: 0;
+    padding: 0;
+}
+
+html, body {
+    min-height: 100%;
+    height: 100%;
+}
+
+.container {
+    height: 500px;
+    padding: 30px;
+    box-sizing: border-box;
+    border: 1px solid #000000;
+    margin: 20px auto;
+    max-width: 1000px;
+}
+
+.bl {
+    background: blue;
+    color: #fff;
+    padding: 5px;
+    border: 1px solid #000000;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.bl:first-child {
+    background: green;
+}
+
+.bl:last-child {
+    background: red;
+}
+
+.container {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+
+    /* flex-direction */
+    /*flex-direction: row; *//* default */
+
+    /* основная ось justify-content */
+    justify-content: flex-start; /* default */
+    /*justify-content: flex-end;*/
+    justify-content: space-between; /* по всей длинне оси */
+    justify-content: space-around;
+    justify-content: center;
+
+    /* поперечная ось align-items */
+    align-items: stretch; /* default */
+    align-items: center;
+    align-items: baseline;
+    align-items: flex-start;
+    align-items: stretch;
+
+    /* flex-wrap */
+    /*flex-wrap: wrap;*/
+    /*flex-wrap: wrap-reverse;*/
+
+    /* align-content поперечная ось аналог justify-content */
+    align-content: center;
+    align-content: space-between;
+    align-content: space-around;
+    align-content: stretch;
+
+    /* flex-flow - flex-direction and flex-wrap */
+    flex-flow: row wrap;
+}
+
+.bl {
+    width: 400px;
+}
+
+.fl1 {}
+.fl2 {}
+.fl3 {}
+.fl4 {}
+.fl5 {}
+.fl6 {}
